ml-workshop-mlflow/base/mlflow-dc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      serviceAccountName: mlflow-proxy
      containers:
        - name: oauth-proxy
          image: openshift/oauth-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: public
          args:
            - --https-address=
            - --http-address=:5000
            - --provider=openshift
            - --openshift-service-account=mlflow-proxy
            - --upstream=http://localhost:5500
            - --cookie-secret=SECRET
        - name: mlflow-deployment
          image: quay.io/ml-aml-workshop/mlflow:0.0.2
          imagePullPolicy: Always
          args:
            - 'mlflow'
            - 'server'
            - '--host'
            - '0.0.0.0'
            - '--port'
            - '5500'
            - '--backend-store-uri'
            - 'postgresql://postgres:postgres@mlflow-db:5432/postgres'
            - '--default-artifact-root'
            - 's3://mlflow/'
            - '--workers'
            - '2'
          ports:
            - name: http
              containerPort: 5500
              protocol: TCP
          resources:
            requests:
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
    - port: 5500
      targetPort: 5500
      name: http-internal

  selector:
    app: mlflow
