ml-workshop-mlflow/base/mlflow-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: mlflow
  labels:
    app: mlflow
spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
